# hellomeson

./: README.md  build.ps1  main.cpp  meson.build
include/: hellomeson.h  hellomesonmacros.h  meson.build
src/: hellomeson.cpp  meson.build
test/: hellomesontest.cpp  meson.build
